--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,11 +6,14 @@ annotated-types==0.7.0
 anyio==4.9.0
 asyncpg==0.30.0
 attrs==25.3.0
+certifi==2025.4.26
 click==8.2.0
 fastapi==0.115.12
 frozenlist==1.6.0
 greenlet==3.2.2
 h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
 Mako==1.3.10
 MarkupSafe==3.0.2
