--- a/backend/docker-compose.base.yml
+++ b/backend/docker-compose.base.yml
@@ -1,6 +1,7 @@
 services:
   postgres:
     image: postgres:15
+    restart: unless-stopped  
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     environment:
@@ -13,8 +14,6 @@ services:
       timeout: 10s
       retries: 5
       start_period: 10s
-    ports:
-    - "${DB_PORT}:5432"
 
 volumes:
   postgres_data:
